[inflearn] feat : 저장 정보 검색 기능 추가

--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-<div class="controller">
+<div class="container">
     <form action="/members/new" method="post"></form>
     <div class="form-group">
         <label for="name">이름</label>
